[project]
name = "gpt-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.34.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
gpt-image = "gpt_image:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gpt_image"]
